--- a/chatapp-ui/src/app/login/login.component.css
+++ b/chatapp-ui/src/app/login/login.component.css
@@ -1,1 +1,20 @@
+.login-card{
+  width: 500px;
+  height: 220px;
+  margin: auto;
+  margin-top: 15%;
+}
 
+.field{
+  width: 100%;
+}
+
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+button{
+  width: 100%;
+}
