--- a/chatapp-ui/src/app/login/login.component.html
+++ b/chatapp-ui/src/app/login/login.component.html
@@ -1,26 +1,28 @@
-<mat-card class="example-card">
+<mat-card class="login-card">
   <mat-card-header>
-    <mat-card-title>Login</mat-card-title>
+    <mat-card-title>CHAT</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form class="example-form">
-      <table class="example-full-width" cellspacing="0">
+    <mat-divider></mat-divider>
+    <form  [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="example-form">
+      <table class="field" cellspacing="0">
         <tr>
           <td>
-            <mat-form-field class="example-full-width">
-              <input matInput placeholder="Username"  name="username" required>
+            <mat-form-field class="field">
+              <input formControlName="username" matInput placeholder="Username"  name="username" required>
             </mat-form-field>
           </td>
         </tr>
         <tr>
-          <td><mat-form-field class="example-full-width">
-            <input matInput placeholder="Password"  type="password" name="password" required>
+          <td><mat-form-field class="field">
+            <input formControlName="password" matInput placeholder="Password"  type="password" name="password" required>
           </mat-form-field></td>
         </tr></table>
     </form>
-<!--    <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>-->
+    <mat-divider></mat-divider>
+ <mat-spinner [style.display]="loading ? 'block' : 'none'"></mat-spinner>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="login()" color="primary">Login</button>
+  <mat-card-actions class="button-element">
+    <button mat-raised-button  (click)="onSubmit()" color="primary">Login</button>
   </mat-card-actions>
 </mat-card>
