--- a/chatapp-ui/src/app/navbar/navbar.component.html
+++ b/chatapp-ui/src/app/navbar/navbar.component.html
@@ -5,17 +5,19 @@
       CHAT
     </button>
     <span class="example-spacer"></span>
-    <div class="user">
+    <div *ngIf="userLoggedIn" class="user">
       <button mat-button>
-        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Avatar" class="avatar">
+        <img src="assets/defaultavatar.png" alt="Avatar"
+             class="avatar">
         {{username}}
       </button>
     </div>
-    <div class="logout">
+    <div *ngIf="userLoggedIn" class="logout">
       <button (click)="logout()" mat-button>
         <mat-icon class="icon">input</mat-icon>
         Logout
       </button>
     </div>
+
   </mat-toolbar-row>
 </mat-toolbar>
